public/stylesheets/styles.css
.center {
  text-align: center;
}

.justify {
  float: none;
  margin: 0 auto;
  text-align: justify;
}

.right {
  text-align: right;
}

body {
  color: #FFF;
  font-family: 'Arimo', Helvetica, sans-serif;
  font-size: 16px;
}

h1 {
  font-weight: 700;
}

.highlight {
  font-style: italic;
  color: #BBB;
}

.bottom-large-spacer {
  padding-bottom: 60px;
}

.bottom-med-spacer {
  padding-bottom: 40px;
}

.bottom-small-spacer {
  padding-bottom: 20px;
}

.top-small-spacer {
  padding-top: 20px;
}

.top-med-spacer {
  padding-top: 40px;
}

.top-large-spacer {
  padding-top: 60px;
}

.ko-op {
  background-color: white;
}

.ko-op p {
  color: black;
}

.ko-op .right-col {
  text-align: right;
}

.ko-op a {
  color: #7a7a7a;
}

.ko-op p {
  color: #7a7a7a;
}

.ko-op .grey {
  color: #424242;
}

.ko-op .underline {
  text-decoration: underline;
}

.ko-op h4 {
  color: #000;
  font-size: 20px;
  font-weight: 400;
}

.ko-op h3 {
  color: #000;
  font-size: 24px;
  font-weight: 400;
}

.games {
  background-color: white;
  background-image: url("/images/light_noise_diagonal.png");
}

.games p {
  color: #5e5e5e;
}

.games h3 {
  color: #5e5e5e;
  font-size: 20px;
  font-weight: 400;
}

.footer p {
  color: #797979;
}

.footer h3 {
  color: #797979;
  font-size: 22px;
  font-weight: 400;
}

.footer .black {
  color: #000;
}

.red-rover {
  background-color: black;
  background-image: url("starbg.png");
}

.red-rover .logo {
  margin-top: 60px;
}

.red-rover .right-col {
  text-align: right;
}

.skipping-stones {
  background-color: #400080;
}

.skipping-stones .logo {
  margin-top: 113px;
}

.skipping-stones .right-col {
  text-align: right;
}

.project-container {
  padding-left: 10px;
  padding-right: 10px;
}

a .none {
  color: #FFF;
  text-decoration: none;
}

.social {
  font-size: 14px;
  color: #444;
}

.social a {
  color: #444;
  text-decoration: underline;
}

.social .none {
  text-decoration: none;
}

.social h3 {
  margin-bottom: 16px;
  color: #444;
}

.social .small p {
  font-size: 12px;
  color: #444;
}

.copyright p {
  color: #BBB;
  font-size: 11px;
}

.ko-op .textfield {
  width: 170px;
  margin-right: 5px;
  margin-top: 10px;
}

.ko-op .field {
  display: inline;
}

.subscribe {
  -moz-box-shadow: inset 0px 1px 0px 0px #000000;
  -webkit-box-shadow: inset 0px 1px 0px 0px #000000;
  box-shadow: inset 0px 1px 0px 0px #000000;
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, black), color-stop(1, black));
  background: -moz-linear-gradient(center top, black 5%, black 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#000000');
  background-color: #000000;
  -moz-border-radius: 6px;
  -webkit-border-radius: 6px;
  border-radius: 6px;
  border: 1px solid #000000;
  display: inline-block;
  color: #ffffff;
  font-size: 14px;
  padding: 6px 18px;
  text-decoration: none;
  text-shadow: 1px 1px 0px #000000;
}

.subscribe:hover {
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, black), color-stop(1, black));
  background: -moz-linear-gradient(center top, black 5%, black 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#000000');
  background-color: #000000;
}


.subscribe:active {
  position: relative;
  top: 1px;
}

.shadowed {
  -moz-box-shadow: inset 0px 0px 10px 1px #AAAAAA;
  -webkit-box-shadow: inset 0px 0px 10px 1px #AAAAAA;
  box-shadow: inset 0px 0px 10px 1px #AAAAAA;
}

